--- a/backend/templates/reset-password.njk
+++ b/backend/templates/reset-password.njk
@@ -1,19 +1,19 @@
 {% extends "base.njk" %}
 
 {% block content %}
-  <h2 class="font-20" style="margin-bottom: 16px; font-weight: 500; color: #3c4049">
+  <h2 style="margin-bottom: 16px; font-weight: 500; color: #3c4049">
     Password Reset Code
   </h2>
-  <p class="font-16" style="margin-bottom: 16px">Hey {{ user.name }},</p>
-  <p class="font-16" style="margin-bottom: 24px">
+  <p  style="margin-bottom: 16px">Hey {{ user.name }},</p>
+  <p  style="margin-bottom: 24px">
     You have requested a password reset for your account. Click the button below to get started.
   </p>
   <button style="background-color: #0047cc; padding: 10px;">
-    <a class="f-12" style="text-decoration: none; color: #edeff2;" href="{{ link }}" target="_blank">Reset password</a>
+    <a style="text-decoration: none; color: #edeff2;" href="{{ link }}" target="_blank">Reset password</a>
   </button>
-  <p class="font-16" style="margin-bottom: 24px">
+  <p  style="margin-bottom: 24px">
     If you did not request a password reset, please ignore this email. Otherwise, use the provided link to reset your password.
   </p>
-  <p class="font-16">Best regards,</p>
-  <p class="font-16" style="margin-bottom: 16px">The MultiCash Team</p>
+  <p class="signing" >Best regards,</p>
+  <p class="signing" style="margin-bottom: 16px">The MultiCash Team</p>
 {% endblock %}
