--- a/backend/templates/transaction-receipt.njk
+++ b/backend/templates/transaction-receipt.njk
@@ -80,7 +80,7 @@
     <div class="transfer-details">
         <div class="section-title">Transaction receipt</div>
         <div class="info-group">
-            <p><strong>Transaction created</strong><br>{{ date | date('MMMM D, YYYY h:mm:ss A z') }}</p>
+            <p><strong>Transaction created</strong><br>{{ date }}</p>
             <p><strong>Transaction ref</strong><br>#{{ transferReference }}</p>
         </div>
     </div>
@@ -108,14 +108,12 @@
 
     <!-- Footer Section -->
     <div class="footer">
-        <p>MultiCash is a registered payment service provider dedicated to facilitating seamless transactions across
-            multiple currencies. We operate under strict compliance with relevant financial regulations, ensuring the
-            highest standards of security and service. Our mission is to empower users with easy access to their funds
-            while prioritizing transparency and reliability. For inquiries, please contact us at
-            support@multicash.africa.
+        <p>
+            MultiCash, a registered payment service provider for multi-currency transactions. Contact us at 
+            <a href="mailto:support@multicash.africa" style="color: #1a73e8; text-decoration: none;">support@multicash.africa</a>.
         </p>
-        <p>MultiCash is committed to maintaining the highest level of customer satisfaction. Visit our website at <a
-                href="https://www.multicash.africa">www.multicash.africa</a> for more information.</p>
+        <p>Visit <a href="https://www.multicash.africa" style="color: #1a73e8; text-decoration: none;">www.multicash.africa</a>.</p>
+
     </div>
 
 </body>
